increased input fot size to 16px to avoid zooming in on ios

--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -24,7 +24,7 @@
     &__input {
         font-family: inherit;
         color:$color-secondary-dark;;
-        font-size: 1.5rem;
+        font-size: 1.6rem;
         padding: 1.5rem 2rem;
         border-radius: 2px;
         background-color: rgba($color-primary-dark, .5);
